[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/widgets/TransactionPopup/TransactionDialog.gd" type="Script" id=2]
[ext_resource path="res://scripts/nodes/NumericLineEdit.gd" type="Script" id=3]
[ext_resource path="res://scripts/widgets/CalendarPopup/CalendarPopup.tscn" type="PackedScene" id=4]

[node name="TransactionPopup" type="ConfirmationDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.5
margin_top = -88.5
margin_right = 123.5
margin_bottom = 88.5
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="TransactionDataWidget" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 239.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="TransactionDataWidget"]
margin_right = 231.0
margin_bottom = 54.0

[node name="ResizableLabel" type="Label" parent="TransactionDataWidget/HBoxContainer4"]
margin_right = 55.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Date:"
valign = 1

[node name="CalendarButton" parent="TransactionDataWidget/HBoxContainer4" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_left = 59.0
margin_right = 231.0
margin_bottom = 54.0
size_flags_horizontal = 3
text = "1999-08-21"

[node name="HBoxContainer2" type="HBoxContainer" parent="TransactionDataWidget"]
margin_top = 58.0
margin_right = 231.0
margin_bottom = 87.0

[node name="ResizableLabel" type="Label" parent="TransactionDataWidget/HBoxContainer2"]
margin_top = 3.0
margin_right = 55.0
margin_bottom = 26.0
text = "Type:"
valign = 1

[node name="TransactionOptionButton" type="OptionButton" parent="TransactionDataWidget/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 59.0
margin_right = 231.0
margin_bottom = 29.0
size_flags_horizontal = 3
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="TransactionDataWidget"]
margin_top = 91.0
margin_right = 231.0
margin_bottom = 124.0

[node name="ResizableLabel" type="Label" parent="TransactionDataWidget/HBoxContainer3"]
margin_top = 5.0
margin_right = 55.0
margin_bottom = 28.0
text = "Value"
valign = 1

[node name="NumericLineEdit" type="LineEdit" parent="TransactionDataWidget/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 59.0
margin_right = 231.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "0"
align = 1
script = ExtResource( 3 )

[connection signal="visibility_changed" from="." to="." method="_on_TransactionPopup_visibility_changed"]
[connection signal="item_selected" from="TransactionDataWidget/HBoxContainer2/TransactionOptionButton" to="." method="_on_TransactionOptionButton_item_selected"]
[connection signal="text_changed" from="TransactionDataWidget/HBoxContainer3/NumericLineEdit" to="." method="_on_NumericLineEdit_text_changed"]
